# OptiTux-GUI

./: .gitignore  ARCHITECTURE.md  Cargo.toml  PKGBUILD  README.md  build.rs  com.sll.optitux-gui.json  index.html  install.sh  main.rs  optitux-gui.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
core/: game_scanner.rs  mod.rs
core/scanners/: lutris_scanner.rs  manual_scanner.rs  mod.rs
material-1.0/ui/components/: date_picker.slint  drawer.slint  navigation_drawer.slint
src/: App.tsx  app.rs  index.css  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: OptiScaler_Example.ini  lib.rs  main.rs
src-tauri/src/core/: config.rs  game_scanner.rs  gpu_detector.rs  metadata.rs  mod.rs  models.rs
src-tauri/src/core/optiscaler/: github.rs  installer.rs  manager.rs  profile.rs
src-tauri/src/core/scanners/: heroic_scanner.rs  lutris_scanner.rs  manual_scanner.rs  steam_scanner.rs
src/components/: app-sidebar.tsx  cover-edit-dialog.tsx  game-card.tsx  install-dialog.tsx  manual-folders-dialog.tsx  support-buttons.tsx
src/components/ui/: progress.tsx  sidebar.tsx
src/config/: mod.rs
src/contexts/: LanguageContext.tsx
src/core/: cache.rs  game_scanner.rs  gpu_detector.rs  installer.rs  mod.rs  models.rs  optiscaler.rs
src/core/optiscaler/: github.rs  installer.rs  manager.rs  mod.rs  profile.rs
src/core/scanners/: heroic_scanner.rs  lutris_scanner.rs  manual_scanner.rs  steam_scanner.rs
src/data/: links.json
src/locales/: en.json  pt-br.json
src/pages/: about.tsx  community.tsx  games-list.tsx  optiscaler-versions.tsx  settings.tsx
src/ui/: game_list.rs  installer.rs  main_window.rs  mod.rs
ui/: main.slint  types.slint
ui/components/: nav_drawer.slint
ui/pages/: about_page.slint  community_page.slint  game_list_page.slint  settings_page.slint  versions_page.slint
