[package]
name = "optitux_gui"
version = "0.1.0"
edition = "2021"
authors = ["OptiTux Contributors"]
description = "Optiscaler interface manager for Linux."

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
zip = "0.6"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
regex = "1.10"
serde_yaml = "0.9"
walkdir = "2.4"
sevenz-rust = "0.6"
