[package]
name = "optitux_gui"
version = "0.1.0"
edition = "2021"
authors = ["OptiTux Contributors"]
description = "Optiscaler interface manager for Linux."

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
zip = "0.6"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
regex = "1.10"
serde_yaml = "0.9"
walkdir = "2.4"
sevenz-rust = "0.6"
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-opener = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
urlencoding = "2.1.3"
futures = "0.3.32"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
